--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -3,7 +3,7 @@
 
   <!-- 用户 openid -->
   <view class="userinfo">
-    LLF
+    LLFJN
     <button 
       open-type="getUserInfo" 
       bindgetuserinfo="onGetUserInfo"
